@@ -8,7 +8,7 @@ dnl empty.
 
 m4_define(pcre_major, [7])
 m4_define(pcre_minor, [3])
-m4_define(pcre_prerelease, [-RC6])
+m4_define(pcre_prerelease, [-RC7])
 m4_define(pcre_date, [2007-08-17])
 
 # Libtool shared library interface versions (current:revision:age)
